--- a/index.html
+++ b/index.html
@@ -63,26 +63,30 @@
     <div class="container services">
         <h1>Services</h1>
         <p>My services that can i offer</p>
-        <div class="card-wrapper">
-            <div class="detail-card">
-                <img src="asset/web dev.webp" height="215" style="margin:auto"/>
-                <h4>Web Development</h4>
-                <p>Create website as a digital solution to automation your bussines. Data store in Database to make it easier calculate and get report of your bussiness.</p>
-            </div>
-        </div>
-        <div class="card-wrapper">
-            <div class="detail-card">
-                <img src="asset/ui ux.webp" height="215" style="margin:auto"/>
-                <h4>UI/UX Design</h4>
-                <p>Create design user friendly and 
-                    better user experience as user want.</p>
-            </div>
-        </div>
-        <div class="card-wrapper">
-            <div class="detail-card">
-                <img src="asset/data analyst.webp" height="215" style="margin:auto"/>
-                <h4>Data Analyst and Scientist</h4>
-                <p>Analyst data and give insight base on data to make good decision of your Busissiness. Also give prediction model using Machine Learning Algoritm.</p>
+        <div class="horizontal-scoll">
+            <div class="services-container">
+                <div class="card-wrapper">
+                    <div class="detail-card">
+                        <img src="asset/web dev.webp" height="215" style="margin:auto"/>
+                        <h4>Web Development</h4>
+                        <p>Create website as a digital solution to automation your bussines. Data store in Database to make it easier calculate and get report of your bussiness.</p>
+                    </div>
+                </div>
+                <div class="card-wrapper">
+                    <div class="detail-card">
+                        <img src="asset/ui ux.webp" height="215" style="margin:auto"/>
+                        <h4>UI/UX Design</h4>
+                        <p>Create design user friendly and 
+                            better user experience as user want.</p>
+                    </div>
+                </div>
+                <div class="card-wrapper">
+                    <div class="detail-card">
+                        <img src="asset/data analyst.webp" height="215" style="margin:auto"/>
+                        <h4>Data Analyst and Scientist</h4>
+                        <p>Analyst data and give insight base on data to make good decision of your Busissiness. Also give prediction model using Machine Learning Algoritm.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
