tambahan style lg .

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <div class="container services">
         <h1>Services</h1>
-        <p>My services that can i offer</p>
+        <p>My services that offer</p>
         <div class="horizontal-scoll">
             <div class="services-container">
                 <div class="card-wrapper">
